# sorter-test

./: pyproject.toml  setup.py
sorter/: __init__.py  __main__.py  command_line.py  filegroups.json
