[tool.poetry]
name = "sorter"
version = "0.1.0"
description = ""
authors = ["webshining <webshining@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
sorter = "sorter.command_line:sort"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
